syntax = "proto3";
package service;
option java_package = "org.qmstr.grpc.service";

import weak "datamodel.proto";

message ReporterConfigRequest {
  int32 reporterID = 1;
}

message ReporterConfigResponse {
  map<string, string> configMap = 1;
  string name = 2;
}

message InfoDataRequest {
  string rootID = 1;
  string infotype = 2;
  string datatype = 3;
}

message InfoDataResponse {
  repeated string data = 1;
}

service ReportService {
  rpc GetReporterConfig(ReporterConfigRequest) returns (ReporterConfigResponse) {}
  rpc GetInfoData(InfoDataRequest) returns (InfoDataResponse) {}
  rpc GetProjectNode(ProjectNode) returns (ProjectNode) {}
}